--- a/main.html
+++ b/main.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link href="./styles.css"/>
+	</head>
   <body>
     <script type="text/javascript" src="./script.js">
 </script>
+	  <h3 id="url">https://localhost:8080/</h3>
+	  <input type="text" id="name" name="name"/>
+	  <input type="number" id="year" name="year"/>
+	  <button id="button">Submit</button>
   </body>
 
 </html>
