--- a/main.html
+++ b/main.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link href="./styles.css"/>
-	</head>
   <body>
     <script type="text/javascript" src="./script.js">
 </script>
 	  <h3 id="url">https://localhost:8080/</h3>
-	  <input type="text" id="name" name="name"/>
-	  <input type="number" id="year" name="year"/>
+	  <label>Name:</label><br/>
+	  <input type="text" id="name" name="name"/><br/>
+	  <label>Graduation Year:</label><br/>
+	  <input type="number" id="year" name="year"/><br/>
 	  <button id="button">Submit</button>
   </body>
 
